test/compilable/test16709.d
// https://issues.dlang.org/show_bug.cgi?id=16709

import imports.test16709a;
import imports.test16709b;

void test(){
  1.to!int;
}
